{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 199,
  "lineage": "61af4d92-7b8a-30a6-9996-26165732b59f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397834880:subnet/subnet-098ad2e9ca0d609aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 245,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ap-southeast-1a-public-subnet"
                ]
              }
            ],
            "id": "subnet-098ad2e9ca0d609aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397834880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ap-southeast-1a-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02c4d6c4d3e3e2545"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397834880:subnet/subnet-0340801bb3aee7b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 247,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ap-southeast-1b-public-subnet"
                ]
              }
            ],
            "id": "subnet-0340801bb3aee7b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397834880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ap-southeast-1b-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02c4d6c4d3e3e2545"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397834880:subnet/subnet-0cc41add596c8d150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 243,
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ap-southeast-1c-public-subnet"
                ]
              }
            ],
            "id": "subnet-0cc41add596c8d150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397834880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "ap-southeast-1c-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02c4d6c4d3e3e2545"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397834880:vpc/vpc-02c4d6c4d3e3e2545",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b9020149ed777cf1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-055272c25274dc0c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c4d6c4d3e3e2545",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ffdc2b93912467a9",
            "owner_id": "767397834880",
            "tags": {
              "Name": "elemnta-rnd-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "otel_collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-otel-alb/745aa0f78b3668bf",
            "arn_suffix": "app/elemnta-lgtm-dev-otel-alb/745aa0f78b3668bf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "elemnta-lgtm-dev-otel-alb-1513652607.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-otel-alb/745aa0f78b3668bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elemnta-lgtm-dev-otel-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f3e2eba21620e36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0340801bb3aee7b50"
              },
              {
                "subnet_id": "subnet-098ad2e9ca0d609aa"
              },
              {
                "subnet_id": "subnet-0cc41add596c8d150"
              }
            ],
            "subnets": [
              "subnet-0340801bb3aee7b50",
              "subnet-098ad2e9ca0d609aa",
              "subnet-0cc41add596c8d150"
            ],
            "tags_all": {
              "Author": "Elemnta",
              "Environment": "dev",
              "Service": "elemnta-lgtm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02c4d6c4d3e3e2545",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.ecs.aws_security_group.monitoring",
            "module.ecs.data.aws_subnet.public_a",
            "module.ecs.data.aws_subnet.public_b",
            "module.ecs.data.aws_subnet.public_c",
            "module.ecs.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231",
            "arn_suffix": "app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "elemnta-lgtm-dev-prometheus-alb-212382777.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elemnta-lgtm-dev-prometheus-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07f3e2eba21620e36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0340801bb3aee7b50"
              },
              {
                "subnet_id": "subnet-098ad2e9ca0d609aa"
              },
              {
                "subnet_id": "subnet-0cc41add596c8d150"
              }
            ],
            "subnets": [
              "subnet-0340801bb3aee7b50",
              "subnet-098ad2e9ca0d609aa",
              "subnet-0cc41add596c8d150"
            ],
            "tags_all": {
              "Author": "Elemnta",
              "Environment": "dev",
              "Service": "elemnta-lgtm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02c4d6c4d3e3e2545",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.ecs.aws_security_group.monitoring",
            "module.ecs.data.aws_subnet.public_a",
            "module.ecs.data.aws_subnet.public_b",
            "module.ecs.data.aws_subnet.public_c",
            "module.ecs.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:listener/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231/ce15fcb395021d9d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:targetgroup/elemnta-lgtm-dev-prometheus-tg/d01b7a93e82d1c26",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:listener/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231/ce15fcb395021d9d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Author": "Elemnta",
              "Environment": "dev",
              "Service": "elemnta-lgtm",
              "Terraform": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.prometheus",
            "module.ecs.aws_lb_target_group.prometheus",
            "module.ecs.aws_security_group.monitoring",
            "module.ecs.data.aws_subnet.public_a",
            "module.ecs.data.aws_subnet.public_b",
            "module.ecs.data.aws_subnet.public_c",
            "module.ecs.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:targetgroup/elemnta-lgtm-dev-prometheus-tg/d01b7a93e82d1c26",
            "arn_suffix": "targetgroup/elemnta-lgtm-dev-prometheus-tg/d01b7a93e82d1c26",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/-/healthy",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:targetgroup/elemnta-lgtm-dev-prometheus-tg/d01b7a93e82d1c26",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:767397834880:loadbalancer/app/elemnta-lgtm-dev-prometheus-alb/09efe3eafe6ac231"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "elemnta-lgtm-dev-prometheus-tg",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Author": "Elemnta",
              "Environment": "dev",
              "Service": "elemnta-lgtm",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02c4d6c4d3e3e2545"
          },
          "dependencies": [
            "module.ecs.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397834880:security-group/sg-07f3e2eba21620e36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f3e2eba21620e36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 13133,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 13133
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 14250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 14250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 14268,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 14268
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 16686,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 16686
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4318,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4318
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8889
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "elemnta-lgtm-dev-monitoring-sg20250711082123392400000001",
            "name_prefix": "elemnta-lgtm-dev-monitoring-sg",
            "owner_id": "767397834880",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Author": "Elemnta",
              "Environment": "dev",
              "Service": "elemnta-lgtm",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c4d6c4d3e3e2545"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}